test-suite/bugs/closed/bug_11421.v
Fail Definition plus1_plus1 : Type@{Set+1} := Type@{Set+1}.
